# altimeter-mission-unit-test-code

./: .gitignore  README.md
main/: CMakeLists.txt  hello_world_main.c
main/drivers/gps/: atgm336h.c  atgm336h.h
main/drivers/imu/: icm42688.c  icm42688.h
main/drivers/memory/: mt25q.c  mt25q.h
main/drivers/radio/: e22.c  e22.h
main/sensors/: bmp388.c  bmp388.h  icm42688.c  icm42688.h  lis2mdl.c  lis2mdl.h
